--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,13 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+# 👇 Railway Variables must be declared as ARG to be available at build time
+ARG VITE_API_BASE_URL
+ARG VITE_SOCKET_URL
+
+# 👇 Make them available to vite build
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ENV VITE_SOCKET_URL=$VITE_SOCKET_URL
 RUN npm run build
 
 # Production stage
