--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,8 @@ RUN npm install
 COPY . .
 ARG VITE_CLIENT_URL
 ENV VITE_CLIENT_URL=$VITE_CLIENT_URL
+ARG ACCESS_TOKEN_SECRET
+ENV ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET
 
 EXPOSE 3000
 CMD ["npm", "start"]
