--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,8 @@ ARG VITE_CLIENT_URL
 ENV VITE_CLIENT_URL=$VITE_CLIENT_URL
 ARG ACCESS_TOKEN_SECRET
 ENV ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET
-ARG SYNC_INDEXES
-ENV SYNC_INDEXES=$SYNC_INDEXES
+ARG MINIO_URL
+ENV MINIO_URL=$MINIO_URL
 
 EXPOSE 3000
 CMD ["npm", "start"]
